@@ -8,4 +8,5 @@ desc: |
  This update addresses the following issues:
  * Add support for post-copy migration.
  * Report IO errors in UMC frontend.
+ * Fix file permissions of backup directory.
 bug: [47617,22695,47741]
